--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.10"
 sympy = "^1.12"
 numpy = "^1.26.4"
 matplotlib = "^3.8.3"
+scipy = "^1.13.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
